# 4DESA

./: Dockerfile  README.md  app.py  db.db  dbtest.py  docker-compose.yml  init.sql  manage.py  models.py  pyproject.toml  readme.md
DESA/: asgi.py  customMessage.py  settings.py  urls.py  wsgi.py
_profile/: urls.py  views.py
comments/: urls.py  views.py
flask_app/social_generic/: __init__.py  auth.py  blog.py  database_access.py  models.py
flask_app/social_generic/templates/blog/: index.html
login/: models.py  urls.py  views.py
login/migrations/: 0001_initial.py  0002_profile.py  0003_comments_value_posts_text.py  0004_rename_post_id_images_post_and_more.py  0005_alter_posts_date.py
posts/: urls.py  views.py
search/: urls.py
signup/: urls.py  views.py
storage_account_access/: saa.py
